XP.css now provided by the server itself

--- a/templates/404.html
+++ b/templates/404.html
@@ -7,26 +7,16 @@
         href="/static/assets/css/XP.css">
         <link rel="stylesheet" href="/static/assets/css/index.css">
         <link rel="stylesheet" href="/static/assets/css/about.css">
+        <link rel="stylesheet" href="/static/assets/css/special.css">
         <script src="/static/assets/js/hrefbutton.js" defer></script>
-        <script src="/static/js/about_me_buttons.js" defer></script>
 
     </head>
     <body>
+
         <div class="header">
             <h1>Old-Games Inc</h1>
-            <h3>copyright</h3>
-            <nav>
-                <button aria-label="/static/index.html" class="href-btn">back to index</button>
-            </nav>
-        </div>
-        <br>
-        <div class="main">
-            <p>You cannot distribute or modify the source code of this site.</p>
-            <p>You also cannot decompile any our our "products"</p>
-
-
-
-            
+            <h2>404</h2>
+            <h3 >page not found</h3>
         </div>
     </body>
 </html>
