--- a/templates/dl.html
+++ b/templates/dl.html
@@ -4,7 +4,7 @@
         <title>Old-Games Inc</title>
         <link
         rel="stylesheet"
-        href="https://unpkg.com/xp.css">
+        href="/static/assets/css/XP.css">
         <link rel="stylesheet" href="/static/assets/css/index.css">
         <script src="/static/assets/js/hrefbutton.js" defer></script>
 
@@ -20,32 +20,34 @@
                 
             </div>
         <div class="main">
+            <div class="games">{% for item in games %}
+                <div class="window" style="width: 300px" aria-label="{{ games[item].label }}">
+                <div class="title-bar">
+                    <div class="title-bar-text">{{ games[item].title }}</div>
+                    <div class="title-bar-controls">
 
-            {% for item in games %}
-            <div class="window" style="width: 300px" aria-label="{{ games[item].label }}">
-            <div class="title-bar">
-                <div class="title-bar-text">{{ games[item].title }}</div>
-                <div class="title-bar-controls">
-
-                <button aria-label="Close" class="close"></button>
+                    <button aria-label="Close" class="close"></button>
+                    </div>
                 </div>
+                <div class="window-body">
+                    <img class="medium-img" src="{{ games[item].cover }}">
+                    <br>
+
+                    <br>
+                    <p>{{ games[item].description }}</p>
+                    <br>
+                    <ul class="tree-view">
+                        <p>Downloads:</p>
+                        <p class="download-btn fakelink" aria-label="{{ games[item].downloads.fi }}">Finnish version</p>
+                        <p class="download-btn fakelink" aria-label="{{ games[item].downloads.en }}">English version</p>
+                    </ul>
+
+
+                </div>
+                {% endfor %}
             </div>
-            <div class="window-body">
-                <img class="medium-img" src="{{ games[item].cover }}">
-                <br>
 
-                <br>
-                <p>{{ games[item].description }}</p>
-                <br>
-                <ul class="tree-view">
-                    <p>Downloads:</p>
-                    <p class="download-btn fakelink" aria-label="{{ games[item].downloads.fi }}">Finnish version</p>
-                    <p class="download-btn fakelink" aria-label="{{ games[item].downloads.en }}">English version</p>
-                </ul>
-
-
-        </div>
-        {% endfor %}
+            
 
 
             
