--- a/templates/gamemanager.html
+++ b/templates/gamemanager.html
@@ -4,7 +4,7 @@
         <title>Old-Games Inc</title>
         <link
         rel="stylesheet"
-        href="https://unpkg.com/xp.css">
+        href="/static/assets/css/XP.css">
         <link rel="stylesheet" href="/static/assets/css/index.css">
         <link rel="stylesheet" href="/static/assets/css/about.css">
         <link rel="stylesheet" href="/static/assets/css/special.css">
