--- a/templates/shark.html
+++ b/templates/shark.html
@@ -4,7 +4,7 @@
         <title>Admin panel</title>
         <link
         rel="stylesheet"
-        href="https://unpkg.com/xp.css">
+        href="/static/assets/css/XP.css">
         <link rel="stylesheet" href="/static/assets/css/index.css">
         <link rel="stylesheet" href="/static/assets/css/about.css">
         <script src="/static/assets/js/hrefbutton.js" defer></script>
