--- a/templates/gamemanager.html
+++ b/templates/gamemanager.html
@@ -56,6 +56,10 @@
             <input type="text" name="label" value="{%+ if game %} {{ game['label'] }} {% endif %}">
 
             <br>
+
+            <label for="passkey">passkey:</label>
+            <input type="password" name="passkey">
+            <br>
             <button type="submit" style="cursor: pointer;" class="form-btn">submit</button>
         </form>
         </div>
