kinda broken but works

--- a/templates/gamemanager.html
+++ b/templates/gamemanager.html
@@ -23,7 +23,7 @@
         <br>
         <div class="main">
         <form method="post" action="/admin/gamemanager">
-            <input type="text" placeholder="game name" name="game">
+            <input type="text" placeholder="game number" name="game">
             <button type="submit">load</button>
         </form>
         <form method="post" action="/api/addgame" class="form">
