--- a/templates/gamemanager.html
+++ b/templates/gamemanager.html
@@ -40,7 +40,7 @@
 
                     <form method="post" action="/api/addgame" class="form">
                         <label for="title" >title:</label>
-                        <input type="text" name="title" value="{%+ if game %} {{ game['title'] }} {% endif %}">
+                        <input type="text" name="title" value="{%+ if game %}{{ game['title'] }}{% endif %}">
 
                         <br>
 
@@ -50,28 +50,28 @@
                         <br>
 
                         <label for="cover">cover art link:</label>
-                        <input type="text" name="cover" value="{%+ if game %} {{ game['cover'] }} {% endif %}">
+                        <input type="text" name="cover" value="{%+ if game %}{{game['cover']}}{% endif %}">
 
                         <br>
 
                         <label for="dl-fi">dl-fi:</label>
-                        <input type="text" name="dl-fi" value="{%+ if game %}  {{ game['downloads']['fi'] }} {% endif %}">
+                        <input type="text" name="dl-fi" value="{%+ if game %}{{game['downloads']['fi']}}{% endif %}">
 
 
                         <br>
 
                         <label for="dl-en">dl-en:</label>
-                        <input type="text" name="dl-en" value="{%+ if game %} {{ game['downloads']['en'] }} {% endif %}">
+                        <input type="text" name="dl-en" value="{%+ if game %}{{game['downloads']['en']}}{% endif %}">
 
                         <br>
 
                         <label for="label">label:</label>
-                        <input type="text" name="label" value="{%+ if game %} {{ game['label'] }} {% endif %}">
+                        <input type="text" name="label" value="{%+ if game %}{{ game['label'] }}{% endif %}">
 
                         <br> 
                         <br>
                         <div class="field-row">
-                        <input checked type="checkbox" id="replace">
+                        <input type="checkbox" id="replace" name="replace">
                         <label for="replace">replace?</label>
                         
                         <label for="id">id:</label>
@@ -93,7 +93,7 @@
 
         {% if game["description"] +%}
         <script>
-            document.getElementById("desc").value = "{{ game['description'] }}"
+            document.getElementById("desc").value = "{{game['description']}}"
         </script>
         {% endif %}
     </body>
